# bitblast

./: .gitignore  Code.sublime-project  LICENSE  Makefile  README.md  bitblast.cabal
espresso/: espresso-linux  espresso-mac
qmc-cpp/: Makefile
qmc-cpp/Tests/: qmc_Tests.cpp  tests_main.cpp  tests_main.h
qmc-cpp/googlemock.framework/: googlemock
qmc-cpp/googlemock.framework/Versions/A/: googlemock
qmc-cpp/googlemock.framework/Versions/A/Resources/: Info.plist
qmc-cpp/qmc/: qmc.cpp  qmc.h  qmc_priv.h
qmc-cpp/qmc.xcodeproj/: project.pbxproj
qmc-cpp/qmc.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
qmc-cpp/qmc.xcodeproj/project.xcworkspace/xcshareddata/: qmc.xccheckout
qmc-cpp/qmc.xcodeproj/xcuserdata/martin.xcuserdatad/xcschemes/: Tests.xcscheme  qmc-dynamic.xcscheme  qmc.xcscheme  xcschememanagement.plist
src/: Arithmetics.hs  ArithmeticsModular.hs  Assignment.hs  CNF.hs  CalculatedFormulas.hs  CoinCBCInterface.hs  EspressoInterface.hs  Formula.hs  LimpCBCInterface.hs  Main.hs  MatrixUtils.hs  MinimizeFormula.hs  ModifiedQmc.hs  NormalForm.hs  ParseCnf.hs  ParseFormula.hs  Playground.hs  Qm.hs  Qm2.hs  QmTerm.hs  QmcCpp.hs  QmcTypes.hs  QuineMcCluskey.hs  SatchmoInterface.hs  SatchmoOutput.hs  TruthBased.hs  TruthBased2.hs  TruthBased3.hs  TruthBasedApprox.hs  TruthBasedCore.hs  TruthBasedGenetic.hs  TruthBasedNaive.hs  TruthTable.hs  Tseitin.hs  TseitinSelect.hs  UnboxMaybe.hs  Utils.hs  Variable.hs  WorthExtraVariables.hs
test/: ArithmeticTruthTables.hs  ArithmeticsModularSpec.hs  ArithmeticsSpec.hs  AssignmentSpec.hs  BranchTruthTables.hs  CNFSpec.hs  EspressoInterfaceSpec.hs  FormulaSpec.hs  MatrixUtilsSpec.hs  MinimizeFormulaSpec.hs  ModifiedQmcSpec.hs  NormalFormSpec.hs  ParseCnfSpec.hs  ParseFormulaSpec.hs  Qm2Spec.hs  QmSpec.hs  QmTermSpec.hs  QmcCppSpec.hs  QuineMcCluskeyAdditionalSpec.hs  QuineMcCluskeySpec.hs  SatchmoInterfaceSpec.hs  Spec.hs  SpecHelper.hs  TruthBased2Spec.hs  TruthBasedCoreSpec.hs  TruthBasedGeneticSpec.hs  TruthBasedNaiveSpec.hs  TruthBasedSpec.hs  TruthTableSpec.hs  TseitinSelectSpec.hs  TseitinSpec.hs  UtilsSpec.hs  VariableSpec.hs  WorthExtraVariablesSpec.hs
