name:                bitblast

-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:            

-- A longer description of the package.
-- description:         

-- The license under which the package is released.
-- license:             AllRightsReserved

-- The file containing the license text.
-- license-file:        LICENSE

author:              Martin Finke

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
-- maintainer:          

category:            Math, Logic

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  README.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10

executable bitblast
    main-is:            Main.hs
    build-depends:      hspec >= 2.1.7, QuickCheck >= 2.8.1,
                        base >=4.8 && <4.9,
                        containers >= 0.5.6.2,
                        vector >= 0.10.12.3,
                        process >= 1.2.3.0,
                        satchmo >= 2.9.7.1,
                        mtl >= 2.2.1,
                        temporary >= 1.2.0.3,
                        directory >= 1.2.2.0,
                        filepath >= 1.4.0.0,
                        regex-posix >= 0.95.2
    hs-source-dirs:     src, test
    default-language:   Haskell2010
    ghc-options:        -O3
    extra-libraries:    qmc-static
    extra-lib-dirs:     "/Users/martin/Documents/studium/4. Semester/Masterarbeit/Code/qmc-cpp"

library
    exposed-modules:    Arithmetics, EspressoInterface, Formula, MinimizeFormula, NormalForm, Qm, SatchmoInterface

    -- Modules included in this library but not exported.
    -- other-modules:       

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:    

    build-depends:      base >=4.8 && <4.9,
                        containers >= 0.5.6.2,
                        vector >= 0.10.12.3,
                        process >= 1.2.3.0,
                        satchmo >= 2.9.7.1,
                        mtl >= 2.2.1,
                        temporary >= 1.2.0.3,
                        directory >= 1.2.2.0,
                        filepath >= 1.4.0.0,
                        regex-posix >= 0.95.2
    hs-source-dirs:     src
    default-language:   Haskell2010
    ghc-options:        -O3
    extra-libraries:    qmc-static
    extra-lib-dirs:     "/Users/martin/Documents/studium/4. Semester/Masterarbeit/Code/qmc-cpp"

Test-Suite tests
    type:               exitcode-stdio-1.0
    hs-source-dirs:     src, test
    main-is:            Spec.hs
    build-depends:      hspec >= 2.1.7, QuickCheck >= 2.8.1,
                        base >=4.8 && <4.9,
                        containers >= 0.5.6.2,
                        vector >= 0.10.12.3,
                        process >= 1.2.3.0,
                        satchmo >= 2.9.7.1,
                        mtl >= 2.2.1,
                        temporary >= 1.2.0.3,
                        directory >= 1.2.2.0,
                        filepath >= 1.4.0.0,
                        regex-posix >= 0.95.2
    default-language:   Haskell2010
    ghc-options:        -static
    extra-libraries:    qmc-static
    extra-lib-dirs:     "/Users/martin/Documents/studium/4. Semester/Masterarbeit/Code/qmc-cpp"