name:                bitblast

-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:            

-- A longer description of the package.
-- description:         

-- The license under which the package is released.
-- license:             AllRightsReserved

-- The file containing the license text.
-- license-file:        LICENSE

author:              Martin Finke

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
-- maintainer:          

category:            Math, Logic

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  README.md

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10

executable bitblast
    main-is:            Main.hs
    build-depends:      hspec >= 2.1.7 && < 2.2, QuickCheck >= 2.8.1 && < 2.9,
                        base >=4.8 && <4.9,
                        containers >= 0.5.6.2 && < 0.6,
                        vector >= 0.10.12.3 && < 0.11,
                        process >= 1.2.3.0 && < 1.3,
                        satchmo >= 2.9.9.1 && < 3,
                        mtl >= 2.2.1 && < 2.3,
                        limp-cbc >= 0.3.2.0 && < 0.3.3,
                        limp >= 0.3.2.0 && < 0.3.3,
                        parallel >= 3.1.0 && < 3.3,
                        time >= 1.5 && < 1.6,
                        parsec >= 3.1.9 && < 3.2,
                        concurrent-extra >= 0.7 && < 0.8,
                        random >= 1.1 && <= 2,
                        MonadRandom >= 0.4 && < 0.5,
                        split >= 0.2.2 && < 0.3,
                        filepath >= 1.4 && < 1.5
    hs-source-dirs:     src, test
    default-language:   Haskell2010
    ghc-options:        -O3 -threaded
    extra-libraries:    qmc-static
    extra-lib-dirs:     "/Users/martin/Documents/studium/4.Semester/Masterarbeit/Code/qmc-cpp"
    extra-lib-dirs:     "/home/mfinke/masterarbeit-code/qmc-cpp"

library
    exposed-modules:    Arithmetics, Formula, MinimizeFormula, NormalForm, QmcTypes

    -- Modules included in this library but not exported.
    -- other-modules:       

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:    

    build-depends:      hspec >= 2.1.7 && < 2.2, QuickCheck >= 2.8.1 && < 2.9,
                        base >=4.8 && <4.9,
                        containers >= 0.5.6.2 && < 0.6,
                        vector >= 0.10.12.3 && < 0.11,
                        process >= 1.2.3.0 && < 1.3,
                        satchmo >= 2.9.9.1 && < 3,
                        mtl >= 2.2.1 && < 2.3,
                        limp-cbc >= 0.3.2.0 && < 0.3.3,
                        limp >= 0.3.2.0 && < 0.3.3,
                        parallel >= 3.1.0 && < 3.3,
                        time >= 1.5 && < 1.6,
                        parsec >= 3.1.9 && < 3.2,
                        concurrent-extra >= 0.7 && < 0.8,
                        random >= 1.1 && <= 2,
                        MonadRandom >= 0.4 && < 0.5,
                        split >= 0.2.2 && < 0.3,
                        filepath >= 1.4 && < 1.5
    hs-source-dirs:     src, test
    default-language:   Haskell2010
    ghc-options:        -O3 -threaded
    extra-libraries:    qmc-static
    extra-lib-dirs:     "/Users/martin/Documents/studium/4.Semester/Masterarbeit/Code/qmc-cpp"
    extra-lib-dirs:     "/home/mfinke/masterarbeit-code/qmc-cpp"

Test-Suite tests
    type:               exitcode-stdio-1.0
    hs-source-dirs:     src, test
    main-is:            Spec.hs
    build-depends:      hspec >= 2.1.7 && < 2.2, QuickCheck >= 2.8.1 && < 2.9,
                        base >=4.8 && <4.9,
                        containers >= 0.5.6.2 && < 0.6,
                        vector >= 0.10.12.3 && < 0.11,
                        process >= 1.2.3.0 && < 1.3,
                        satchmo >= 2.9.9.1 && < 3,
                        mtl >= 2.2.1 && < 2.3,
                        limp-cbc >= 0.3.2.0 && < 0.3.3,
                        limp >= 0.3.2.0 && < 0.3.3,
                        parallel >= 3.1.0 && < 3.3,
                        time >= 1.5 && < 1.6,
                        parsec >= 3.1.9 && < 3.2,
                        concurrent-extra >= 0.7 && < 0.8,
                        random >= 1.1 && <= 2,
                        MonadRandom >= 0.4 && < 0.5,
                        split >= 0.2.2 && < 0.3,
                        filepath >= 1.4 && < 1.5
    default-language:   Haskell2010
    ghc-options:        -static -threaded
    extra-libraries:    qmc-static
    extra-lib-dirs:     "/Users/martin/Documents/studium/4.Semester/Masterarbeit/Code/qmc-cpp"
    extra-lib-dirs:     "/home/mfinke/masterarbeit-code/qmc-cpp"
